src/main/java/com/example/team_work_management/exception/error/CommentNotFoundException.java
package com.example.team_work_management.exception.error;

public class CommentNotFoundException extends RuntimeException{
    public CommentNotFoundException(String message){
        super(message);
    }
}
